--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap");
 
 * {
     box-sizing: border-box;
 }
 
-
 body {
-    font-family: 'Barlow', sans-serif;
+    font-family: "Barlow", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +14,6 @@ body {
     overflow: hidden;
     height: 100vh;
     /* we need height for align items to work*/
-
 }
 
 .container {
@@ -35,8 +32,8 @@ body {
     margin: 10px;
     position: relative;
     transition: flex 0.8s ease-in-out;
-  
 }
+
 .panel.active {
     flex: 7;
 }
@@ -52,19 +49,15 @@ h3 {
     text-align: center;
 }
 
-
-
 p {
     color: rgb(0, 0, 0);
     position: absolute;
     left: 10px;
     top: 97%;
     font-size: 1.6rem;
-    opacity: 0;    
+    opacity: 0;
 }
 
 .panel.active p {
     opacity: 100;
-
 }
-
