--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=N:wght@300;400;500;700&display=swap");
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: "Barlow", sans-serif;
+    font-family: "Roboto","Barlow", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,6 +52,9 @@ body {
 
 .panel.active h3 {
     opacity: 1;
+    transition: opacity 1s;
+    transition-delay: 0.5s;
+
 }
 
 .panel p {
@@ -65,15 +68,19 @@ body {
 
 .panel.active p {
     opacity: 100;
+    transition: opacity 3s;
+    transition-delay: 0.5s;
 }
 
 
 @media (max-width: 768px) {
     .container {
         width: 100vw;
+        display: flex;
+        flex-direction: column;
     }
 
-    .panel:nth-of-type(4), 
+    /* .panel:nth-of-type(4), 
     .panel:nth-of-type(5),
     .panel:nth-of-type(6),
     .panel:nth-of-type(7),
@@ -81,5 +88,7 @@ body {
     .panel:nth-of-type(9),
     .panel:nth-of-type(10) {
         display: none;
-    }
+    } */
+
+
 }
