--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=N:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap&family=Roboto+Slab:wght@300;400;500;700&display=swap");
+
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto","Barlow", sans-serif;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,6 +15,10 @@ body {
     overflow: hidden;
     height: 100vh;
     /* we need height for align items to work*/
+}
+
+h1 {
+    font-family: "roboto slab",serif;
 }
 
 .container {
@@ -40,14 +45,18 @@ body {
 }
 
 .panel h3 {
-    color: rgb(0, 191, 255);
+    color: #fbff00;
+    background-color: rgba(30, 30, 30, 0.403);
+    border-radius: 10px;
     font-size: 1.8rem;
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 20px;
+    left: 20px;
     margin: 0;
     opacity: 0;
     text-align: center;
+    padding: 0.3rem 0.5rem;
+    
 }
 
 .panel.active h3 {
@@ -60,7 +69,7 @@ body {
 .panel p {
     color: rgb(0, 0, 0);
     position: absolute;
-    left: 10px;
+    left: 20px;
     top: 97%;
     font-size: 1.6rem;
     opacity: 0;
