--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,15 @@
     box-sizing: border-box;
 }
 
+
 body {
     font-family: "Montserrat", sans-serif;
+    background-image: linear-gradient(to bottom right,rgba(154, 147, 16, 0.573), rgba(34, 44, 1, 0.852));
+    /* we need height for align items to work*/
+    overflow: hidden;
+}
+
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,11 +21,13 @@ body {
     margin: 0;
     overflow: hidden;
     height: 100vh;
-    /* we need height for align items to work*/
+    backdrop-filter: blur(10px);
 }
 
 h1 {
     font-family: "roboto slab",serif;
+    color:#fbff00;
+    font-size: 2.5rem;
 }
 
 .container {
@@ -42,6 +51,7 @@ h1 {
 
 .panel.active {
     flex: 7;
+    box-shadow: 5px 5px 15px 5px #464629
 }
 
 .panel h3 {
@@ -67,7 +77,7 @@ h1 {
 }
 
 .panel p {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     position: absolute;
     left: 20px;
     top: 97%;
