--- a/styles.css
+++ b/styles.css
@@ -99,15 +99,12 @@ h1 {
         flex-direction: column;
     }
 
-    /* .panel:nth-of-type(4), 
-    .panel:nth-of-type(5),
-    .panel:nth-of-type(6),
-    .panel:nth-of-type(7),
-    .panel:nth-of-type(8),
-    .panel:nth-of-type(9),
-    .panel:nth-of-type(10) {
+    
+    p {
         display: none;
-    } */
+    }
+
+
 
 
 }
