--- a/styles.css
+++ b/styles.css
@@ -92,15 +92,48 @@ h1 {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 568px) and (min-width: 100px) {
+   h1 {
+    margin-top: 0;
+    font-size: 1rem;
+    text-align: center;
+   }
+   
     .container {
         width: 100vw;
-        display: flex;
-        flex-direction: column;
+        height: 90vh;
+    }
+
+    .panel {
+        display: none;
+        border-radius: 8px;
+        height: 35vh;
+        background-size:contain;
+    }
+
+
+    .panel h3 {
+        text-align: center;
+        border-radius: 5px;
+        padding: 0 0 0 0;
+        left: 10px;
+        bottom: 0;
+        color: rgb(0, 255, 229);
+        
+        font-size: 1rem;
+    }
+    
+    .panel.active p {
+        font-size: 1rem;
+        color: red;
+        left: 10px;
     }
 
     
-    p {
+    .panel.active {
+        display: block;
+    }
+    .hidden {
         display: none;
     }
 
