--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,27 @@ h1 {
         display: none;
     }
 
+    .navigate-box {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 15px;
+        position: absolute;
+        bottom: 30px;
+    }
+
+    .navigate-btn {
+        width: 80px;
+        height: 30px;
+        font-weight: 400px;
+        /* position: absolute; */
+    }
+
+    .disabled {
+        pointer-events: none;
+        opacity: 0.3;  
+    }
+
 
 
 
