--- a/styles.css
+++ b/styles.css
@@ -122,14 +122,14 @@ h1 {
         padding: 0 0 0 0;
         left: 10px;
         bottom: 0;
-        color: rgb(0, 255, 229);
+        /* color: rgb(0, 255, 229); */
         
         font-size: 1rem;
     }
     
     .panel.active p {
         font-size: 1rem;
-        color: red;
+        /* color: red; */
         left: 10px;
     }
 
