--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,13 @@ h1 {
     display: none;
 }
 
+
+.panel h2 {
+    margin-left: 20px;
+    font: 1rem;
+    color:rgb(255, 255, 255);
+}
+
 @media (max-width: 568px) {
     h1 {
         margin-top: 0;
@@ -150,13 +157,21 @@ h1 {
         justify-content: center;
         gap: 15px;
         position: absolute;
-        bottom: 20%;
+        bottom: 15%;
     }
 
     .navigate-btn {
-        width: 80px;
-        height: 30px;
-        font-weight: 400px;
+        width: 100px;
+        height: 50px;
+        font-weight: 700px;
+        box-shadow: 1px 1px 10px 2px #464629;
         /* position: absolute; */
+
     }
 }
+
+.navigate-btn:active {
+    background-color: rgba(183, 186, 181, 0.572);
+    border: none;
+}
+
