--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,11 @@ h1 {
     display: flex;
     width: 90vw;
     height: 80vh;
-     background-image: linear-gradient(
-        to bottom left ,#718030,#3e4811, #17240a
-        
+    background-image: linear-gradient(
+        to bottom ,
+        #718030,
+        #3e4811,
+        #17240a
     );
 }
 
@@ -57,7 +59,6 @@ h1 {
     position: relative;
     transition: flex 0.8s ease-in-out;
     cursor: pointer;
-    
 }
 
 .panel.active {
@@ -112,13 +113,14 @@ h1 {
 
 /* MOBILE STYLES */
 @media (max-width: 568px) {
-     
     h1 {
         margin: 5% 0;
 
         font-size: 1rem;
         text-align: center;
     }
+
+   
 
     body {
         height: 90vh;
@@ -133,7 +135,6 @@ h1 {
         height: 100%;
         backdrop-filter: blur(10px);
     }
-    
 
     .container {
         width: 95%;
@@ -151,7 +152,6 @@ h1 {
         background-size: cover;
         background-position: bottom;
 
-
         &.active {
             display: block;
             opacity: 1;
@@ -159,21 +159,25 @@ h1 {
             border-radius: 8px;
             /* box-shadow: 0 0 5px #000000; */
 
-
             & p {
                 font-size: 1rem;
                 /* color: red; */
-                left: 10px;
+                left: 5px;
                 opacity: 100;
                 margin-top: 15px;
             }
+        }
+
+        & h2 {
+            font-size: 1rem;
+            margin-left: 5px;
         }
 
         & h3 {
             text-align: center;
             border-radius: 5px;
             padding: 0 0 0 0;
-            left: 10px;
+            left: 5px;
             bottom: 0;
             opacity: 0;
             font-size: 1rem;
@@ -200,9 +204,24 @@ h1 {
         box-shadow: 1px 1px 10px 2px #464629;
         /* position: absolute; */
     }
-}
 
-.navigate-btn:active {
-    background-color: rgba(183, 186, 181, 0.572);
-    border: none;
+    .navigate-btn:active {
+        background-color: rgba(183, 186, 181, 0.572);
+        border: none;
+    }
+
+    .dots-container {
+        & .dot {
+            background-color: #606340;
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+            border: none;
+            padding: 0;
+
+            &.dot-active {
+                background-color: #fbff00b7;
+            }
+        }
+    }
 }
