--- a/styles.css
+++ b/styles.css
@@ -218,9 +218,12 @@ h1 {
             border-radius: 50%;
             border: none;
             padding: 0;
+            margin: 0 5px;
+            transition: scale, background 0.5s ease-in-out;
 
             &.dot-active {
                 background-color: #fbff00b7;
+                scale: 1.3;;
             }
         }
     }
