--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h1 {
     flex: 0.5;
     margin: 10px;
     position: relative;
-    transition: flex 0.8s ease-in-out;
+    transition: all 0.8s ease-in-out;
     cursor: pointer;
 }
 
@@ -99,6 +99,7 @@ h1 {
     opacity: 100;
     transition: opacity 3s;
     transition-delay: 0.5s;
+    
 }
 
 .navigate-box {
@@ -112,7 +113,7 @@ h1 {
 }
 
 /* MOBILE STYLES */
-@media (max-width: 568px) {
+@media (max-width: 768px) {
     h1 {
         margin: 5% 0;
 
@@ -137,6 +138,7 @@ h1 {
     }
 
     .container {
+        /* position: relative; */
         width: 95%;
         height: 90%;
         box-shadow: 0 0 10px#212110ec;
@@ -146,17 +148,29 @@ h1 {
 
     /* Panel styles*/
     .panel {
-        display: none;
+        opacity: 0;
+        
+        position: absolute;
         border-radius: 8px;
         height: 40%;
+        width: 90%;
+        user-select: none;
         background-size: cover;
         background-position: bottom;
+        cursor: default;
+
+    
+
+    
+    
 
         &.active {
-            display: block;
-            opacity: 1;
+            opacity: 100;
             box-shadow: none;
             border-radius: 8px;
+            user-select:contain;
+            
+            /* display: block; */
             /* box-shadow: 0 0 5px #000000; */
 
             & p {
@@ -210,6 +224,10 @@ h1 {
         border: none;
     }
 
+}
+
+
+    /* Dots styles */
     .dots-container {
         & .dot {
             background-color: #606340;
@@ -227,4 +245,3 @@ h1 {
             }
         }
     }
-}
