feat: add read more link

--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,7 @@ h1 {
     display: flex;
     width: 90vw;
     height: 80vh;
-    background-image: linear-gradient(
-        to bottom ,
-        #718030,
-        #3e4811,
-        #17240a
-    );
+    background-image: linear-gradient(to bottom, #718030, #3e4811, #17240a);
 }
 
 .panel {
@@ -99,7 +94,6 @@ h1 {
     opacity: 100;
     transition: opacity 3s;
     transition-delay: 0.5s;
-    
 }
 
 .navigate-box {
@@ -120,8 +114,6 @@ h1 {
         font-size: 1rem;
         text-align: center;
     }
-
-   
 
     body {
         height: 90vh;
@@ -149,27 +141,24 @@ h1 {
     /* Panel styles*/
     .panel {
         opacity: 0;
-        
+        visibility: hidden;
+
         position: absolute;
         border-radius: 8px;
         height: 40%;
         width: 90%;
-        user-select: none;
         background-size: cover;
         background-position: bottom;
         cursor: default;
-
-    
-
-    
-    
+        z-index: 1;
 
         &.active {
             opacity: 100;
             box-shadow: none;
             border-radius: 8px;
-            user-select:contain;
-            
+            z-index: 10;
+            visibility: visible;
+
             /* display: block; */
             /* box-shadow: 0 0 5px #000000; */
 
@@ -223,25 +212,37 @@ h1 {
         background-color: rgba(183, 186, 181, 0.572);
         border: none;
     }
-
 }
 
+/* Dots styles */
+.dots-container {
+    & .dot {
+        background-color: #606340;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        border: none;
+        padding: 0;
+        margin: 0 5px;
+        transition: scale, background 0.5s ease-in-out;
 
-    /* Dots styles */
-    .dots-container {
-        & .dot {
-            background-color: #606340;
-            width: 5px;
-            height: 5px;
-            border-radius: 50%;
-            border: none;
-            padding: 0;
-            margin: 0 5px;
-            transition: scale, background 0.5s ease-in-out;
-
-            &.dot-active {
-                background-color: #fbff00b7;
-                scale: 1.3;;
-            }
+        &.dot-active {
+            background-color: #fbff00b7;
+            scale: 1.3;
         }
     }
+}
+
+.link {
+    /* position: absolute;
+    top: 400px; */
+    display: none;
+
+    /* color: #bee901; */
+    color: #bfe9014f;
+
+    &.active {
+        display: block;
+        width: fit-content;
+    }
+}
