--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,24 @@ h1 {
         }
     } /* End of panel styles*/
 
+
+    .toast {
+        color: #fbff00;
+        position: absolute;
+        bottom: 5%;
+        width: 40%;
+        text-align: center;
+        transition: all 3s;
+        opacity: 0;
+        background-color: #3b4313;
+        border-radius: 10px;
+
+    }
+
+    h2 {
+        display: none;
+    }
+
     .hidden {
         display: none;
     }
@@ -212,7 +230,7 @@ h1 {
         background-color: rgba(183, 186, 181, 0.572);
         border: none;
     }
-}
+} /*End of mobile styles*/
 
 /* Dots styles */
 .dots-container {
@@ -246,3 +264,5 @@ h1 {
         width: fit-content;
     }
 }
+
+
